syntax = "proto3";

/* option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW"; */

import "google/protobuf/any.proto";

package helloworld;
// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) { }

  // Send another greeting
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) { }

  rpc LogTheObj ( testObj ) returns ( testObj ) { }

}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message TestObj = {
    repeated google.protobuf.Any = 1;
}
